CHANGES IN VERSION 1.46.1
-------------------------

UTILITIES

    o `seqVCF_Header()` allows multiple cores to calculate the total number of
      variants when 'getnum=TRUE' (the Rsamtools package should be installed);
      `seqVCF2GDS()` is faster when obtaining the number of variants for
      splitting files.


CHANGES IN VERSION 1.46.0
-------------------------

UTILITIES

    o `seqGetData()` return NULL, if 'var.name=character()'


CHANGES IN VERSION 1.44.3
-------------------------

UTILITIES

    o update the C codes according to '_R_USE_STRICT_R_HEADERS_=true' &
      '_R_CXX_USE_NO_REMAP_=true'


CHANGES IN VERSION 1.44.2
-------------------------

BUG FIXES

    o fix `seqAddValue(, val=vector("list", NUM_VARIANT))`

    o fix the ploidy returned from `seqVCF_Header()`, when there are genotypes
      of males and females on Chromosome X


CHANGES IN VERSION 1.44.1
-------------------------

UTILITIES

    o new option 'numvariant' in `seqEmptyFile()`

BUG FIXES

    o `seqMerge()` should internally use "chr_position_ref_alt" to distinguish
      the variants in different files

    o `seqAddValue(, varnm="annotation/filter")` should work with a factor
      variable

    o `seqAddValue(, varnm="variant.id")` can reset the variant IDs with a
      different number of the variants


CHANGES IN VERSION 1.44.0
-------------------------

UTILITIES

    o tweak the display of progress information in `seqVCF2GDS()`

    o `seqVCF_Header(, getnum=TRUE, verbose=TRUE)` to show the progress
      information for scanning the VCF file

    o new `seqGetData(, "$dosage_alt2")` and `seqGetData(, "$dosage_sp2")` for
      sex chromosomes, when the alleles are partially missing (e.g., genotypes
      on chromosome X for males)

    o new 'verbose.clean' in `seqExport()` to control how much information to
      be displayed


CHANGES IN VERSION 1.42.4
-------------------------

BUG FIXES

    o `seqGetData(, "$dosage_alt")` and `seqGetData(, "$dosage_sp")` work