@@ -8,6 +8,10 @@ UTILITIES
       `seqVCF2GDS()` is faster when obtaining the number of variants for
       splitting files.
 
+    o new 'variant_count' in `seqVCF2GDS()` to specify the number of variants
+      in the VCF file when it is known; it is only applicable when multiple
+      cores are used.
+
 
 CHANGES IN VERSION 1.46.0
 -------------------------
